force-app/zurich-base/main/default/objects/ErrorManagementSetting__mdt/ErrorManagementSetting__mdt.object-meta.xml
<CustomObject>
    <label>ErrorManagementSetting</label>
    <pluralLabel>ErrorManagementSetting</pluralLabel>
</CustomObject>