force-app/zurich-base/main/default/objects/ErrorManagementSetting__mdt/fields/Min_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Min_Log_Level__c</fullName>
    <label>Min Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>warning</fullName>
                <default>true</default>
                <label>warning</label>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>