force-app/zurich-base/main/default/objects/ErrorManagementSetting__mdt/fields/Notify_From__c.field-meta.xml
<CustomField>
    <fullName>Notify_From__c</fullName>
    <label>Notify From</label>
    <length>2560</length>
    <type>LongTextArea</type>
</CustomField>