force-app/zurich-base/main/default/objects/ErrorManagementSetting__mdt/fields/Notify_To__c.field-meta.xml
<CustomField>
    <fullName>Notify_To__c</fullName>
    <label>Notify To</label>
    <length>2560</length>
    <type>LongTextArea</type>
</CustomField>