force-app/zurich-base/main/default/objects/ErrorManagementSetting__mdt/validationRules/Notify_To_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Notify_To_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Send_Email__c == true,!REGEX(Notify_To__c, &quot;^([\\w+-.%]+@[\\w-.]+\\.[A-Za-z]{2,4},?)+$&quot;))</errorConditionFormula>
    <errorDisplayField>Notify_To__c</errorDisplayField>
    <errorMessage>Email addresses separated by comma</errorMessage>
</ValidationRule>