force-app/zurich-base/main/default/objects/ErrorManagementSetting__mdt/validationRules/Set_sender_and_recipient.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_sender_and_recipient</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Send_Email__c == true,OR(ISBLANK(Notify_To__c),ISBLANK(Notify_From__c)) )</errorConditionFormula>
    <errorMessage>The notify from and recipient(s) email address(es) must be set</errorMessage>
</ValidationRule>